[new] bios for first three characters [new] larger first word (name) for bios [fix] shifted title glow down [new] links to (nonexistent) mobile.css on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ body {
 }
 #title_glow {
   position: relative;
-  top: 40px;
+  top: 45px;
   box-shadow: 0px 0px 150px 6px white;
 }
 #title {
@@ -321,9 +321,14 @@ body {
   display: inline-block;
   color: white;
   white-space: normal;
+  line-height: 16px;
 }
 .bio div {
   border-top: 1px solid white;
+}
+.first-word {
+  font-size: 35px;
+  letter-spacing: 5px;
 }
 .actor_pic {
   vertical-align: middle;
